# GAC-Mapping

./: .gitignore  README.md  release_notes.txt
Patch-NetVLAD/: feature_extract.py  feature_extract_ros.py
Patch-NetVLAD/patchnetvlad/configs/: gacm.ini
Patch-NetVLAD/patchnetvlad/dataset_imagenames/: gacm_submapImg_index.txt  gacm_thumbnail_index.txt
camera_model/: package.xml
camera_model/src/: intrinsic_calib.cc
camera_model/src/calib/: CameraCalibration.cc
camera_model/src/chessboard/: Chessboard.cc
gacm/: CMakeLists.txt  package.xml
gacm/config/: car.yaml  graco_uav.yaml  graco_ugv.yaml  uav.yaml
gacm/include/: featureDefinition.h  featureExtractor.h  lidarFactor.h  parameters.h  poseEstimator.h  scanRegistrator.h
gacm/include/depth_completion/: depth_interpolation.h  guided_filter.h  ip_basic_dc.h  joint_bilateral_filter.h
gacm/include/depth_completion/eval/: depth_util.h  evaluation.h  io_depth.h
gacm/include/ga_posegraph/: poseFactor.h  poseGraphStructure.h
gacm/include/ga_velodyne/: common.h
gacm/include/mapping/: sub_map.h
gacm/include/skimap/: SkiGridMapInterface.h  SkiMap.hpp  SkiMapInterface.h  SkipListDense.hpp  SkipListMapV2.hpp  cloud.h  lidar_slam_utils.h  loamskimap.h  logger.h  map_viewer.h  st_lidar_slam_utils.h  transform.h
gacm/include/util/: godec.h  ip_basic.h  iputil.h  jbf_filter.h  log_colormap.h
gacm/launch/: gacm.launch  graco.launch  submap.launch  vl_odom.launch
gacm/rviz_cfg/: corner_check.rviz  gacm.rviz  test-gacm.rviz
gacm/src/: featureTrackingNode.cpp  parameters.cpp  plOdometryNode.cpp  submapManagerNode.cpp
netvlad_tf_test/: CMakeLists.txt  package.xml
netvlad_tf_test/srv/: CompactImg.srv
