<?xml version="1.0"?>
<package >
  <name>netvlad_tf_test</name>
  <version>0.0.0</version>
  <description>
    Tensorflow port of https://github.com/Relja/netvlad
  </description>

  <author>Titus Cieslewski</author>
  <maintainer email="titus@ifi.uzh.ch">Titus Cieslewski</maintainer>
  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <buildtool_depend>catkin_simple</buildtool_depend> -->

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospy_tutorials</build_depend>
  <!-- <build_depend>cv_bridge</build_depend> -->
  
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospy_tutorials</run_depend>
  <!-- <run_depend>cv_bridge</run_depend> -->
</package>
